--- a/main.css
+++ b/main.css
@@ -110,3 +110,12 @@ a img{
 	width: 100%;
 }
 
+.doboz2{
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 60px 10%;
+	margin-top: 700px;
+}
