--- a/main.css
+++ b/main.css
@@ -119,3 +119,13 @@ a img{
 .galeria2 img{
 	width: 40%;
 }
+
+.doboz2{
+	width: 100%;
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 60px 10%;
+	margin-top: 700px;
+}
