--- a/main.css
+++ b/main.css
@@ -111,9 +111,8 @@ a img{
 }
 
 .galeria2{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	grid-gap: 50px;
+	display: inline-block;
+	position: relative;
 	margin-top: 50px;
 }
 
